# layered-template

./: Cargo.toml
api-application/: Cargo.toml
api-application/src/: lib.rs  modules.rs
api-application/src/model/: health_check.rs
api-application/src/usecase/: health_check.rs
api-domain/: Cargo.toml
api-domain/src/: lib.rs  modules.rs
api-domain/src/config/: db.rs  mod.rs
api-domain/src/model/: mod.rs
api-domain/src/persistence/: db.rs
api-domain/src/repository/: health_check.rs
api-infrastructure/: Cargo.toml
api-infrastructure/src/: modules.rs
api-infrastructure/src/persistence/: db.rs
api-infrastructure/src/repository/: health_check.rs  mod.rs
api-infrastructure/src/repository/fixtures/: health_check.sql
api-presentation/: Cargo.toml
api-presentation/src/: lib.rs
api-presentation/src/helper/: api_response.rs  failure_response.rs  mod.rs  success_response.rs
api-presentation/src/model/: health_check.rs
api-presentation/src/router/: health_check.rs  mod.rs
api-presentation/src/router/tests/: mod.rs
api-presentation/src/router/tests/health_check/: get_health_check.json  mod.rs
api-presentation/src/startup/: log.rs  mod.rs  router.rs
api-shared/: Cargo.toml
api-shared/src/: error.rs
migrations/: 0001_sample.sql
