[workspace]
members = [
    "api-infrastructure",
    "api-application",
    "api-domain",
    "api-presentation",
    "api-shared",
]

resolver = "2"

[workspace.package]
edition = "2021"

# [features]
# default = ["prod"]
# prod = ["api-presentation/prod"]

[workspace.dependencies]
api-presentation = { path = "./api-presentation" }
api-infrastructure = { path = "./api-infrastructure" }
api-application = { path = "./api-application" }
api-domain = { path = "./api-domain" }
api-shared = { path = "./api-shared" }

uuid = { version = "=1.13.1", features = ["serde"] }
thiserror = "=2.0.11"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
chrono = { version = "=0.4.39", features = ["serde"] }
tokio = { version = "=1.43.0", features = ["full"] }
more-convert = "=0.4.2"
tracing = "=0.1.41"
async-trait = "=0.1.86"
mockall = "=0.13.1"

sqlx = { version = "=0.8.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
