[package]
name = "api-application"
version = "0.1.0"
edition = "2021"

[dependencies]
api-shared = { workspace = true }
api-domain = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
more-convert = { workspace = true }

[lints]
workspace = true
