[package]
name = "api-infrastructure"
version = "0.1.0"
edition = "2021"

[features]
default = []
prod = []

[dependencies]
api-shared = { workspace = true }
api-domain = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
more-convert = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
