[package]
name = "api-presentation"
version = "0.1.0"
edition = "2021"

[features]
default = []
prod = []

[dependencies]
api-shared = { workspace = true }
api-application = { workspace = true }
api-infrastructure = { workspace = true }
api-domain = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
more-convert = { workspace = true }
tracing = { workspace = true }

axum = "=0.8.1"

tracing-subscriber = { version = "=0.3.19" }

[dev-dependencies]
api-domain = { workspace = true, features = ["mockall"] }
axum-test = "=17.2.0"

[lints]
workspace = true
